<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.final_project.ui.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/action_loginFragment_to_tasksFragment"
            app:destination="@id/tasksFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.final_project.ui.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_signUpFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/tasksFragment"
        android:name="com.example.final_project.ui.TasksFragment"
        android:label="@string/nav_tasks"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/completedTasksFragment"
        android:name="com.example.final_project.ui.CompletedTasksFragment"
        android:label="@string/nav_completed"
        tools:layout="@layout/fragment_completed_tasks" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.final_project.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <action
        android:id="@+id/action_global_loginFragment"
        app:destination="@id/loginFragment"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true" />

</navigation>
